@@ -259,3 +259,4 @@ Release 2.7.1
 
 * Implemented FR 3317539 [ERDesignerNG] TableSelectEditor: (De)select whole subtrees
 * Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tab
+* Bug Fixing 2899094 [ERDesignerNG] select first *non-system* schema in RevEngEd (re-introduced by buggy commit in v1072)
